--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -1,5 +1,6 @@
 <div class="jumbotron">
   <h1>Your cart</h1>
+  <p><%= link_to "Return to store", root_path %>
 </div>
 
 <table class="table">
@@ -11,15 +12,19 @@
   <% @cart.cart_items.each do |item| %>
     <tr>
       <td><%= item.product.name %></td>
-      <td><%= item.quantity %></td>
-      <td><%= number_to_currency(item.price_in_dollars) %></td>
+      <td class="item-quantity" data-cart-item="<%= item.id %>"><%= item.quantity %> |
+      <%= link_to "Edit", edit_cart_item_path(cart_item_id: item.id),
+      remote: true %></td>
+      <td class="item-price" data-cart-item="<%= item.id %>">
+        <%= number_to_currency(item.price_in_dollars) %>
+      </td>
     </tr>
   <% end %>
   <tr></tr>
   <tr>
     <td></td>
     <td><b>Total: </b></td>
-    <td><%= number_to_currency @cart.price_in_dollars %></td>
+    <td id="total-price"><%= number_to_currency @cart.price_in_dollars %></td>
 </table>
 
 <%= render 'payola/transactions/checkout', sellable: @cart %>
