--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,10 @@
   padding-left: 20px;
 }
 
+.home {
+  margin-bottom: 10px;
+}
+
 .product {
   padding: 0;
   margin: 0;
@@ -13,5 +17,13 @@
   width: 23%;
   img {
     max-width: 100%;
+  }
+}
+
+#search {
+  text-align: center;
+  margin-bottom: 10px;
+  #search-input {
+    width: 33%;
   }
 }
