--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,9 +5,9 @@
 </div>
 
 <div id="search">
-  <%= form_tag root_path, method: :get, class: "form-horizontal" do %>
-    <%= text_field_tag :search_products, nil, id: "search-input" %>
-    <%= submit_tag "Search", class: "btn btn-default" %>
+  <%= form_tag root_path, method: :get, class: "form-horizontal", id: "search-form" do %>
+    <%= label_tag :search %>
+    <%= text_field_tag :search_products, nil, class: "typeahead" %>
   <% end %>
 
   <% if params[:search_products].present? %>
