--- a/app/views/cart/add.js.erb
+++ b/app/views/cart/add.js.erb
@@ -1,4 +1,4 @@
 $("[data-product-id='<%= @product.id %>']")
-  .replaceWith("<a class='btn btn-primary' href='/cart'>View Cart</a><p>Added to cart!</p>");
+  .replaceWith("<a class='btn btn-primary' href='/cart'>View Cart</a> Added to cart!");
 
 
