--- a/app/assets/stylesheets/typeahead.scss
+++ b/app/assets/stylesheets/typeahead.scss
@@ -145,13 +145,17 @@ fieldset[disabled] .twitter-typeahead .tt-input {
   cursor: not-allowed;
   background-color: #eeeeee !important;
 }
+.tt-hint {
+  float: left;
+  top: -4px !important;
+}
 .tt-dropdown-menu {
   position: absolute;
   top: 100%;
-  left: 0;
+  left: -4px !important;
   z-index: 1000;
   min-width: 160px;
-  width: 100%;
+  width: 50% !important;
   padding: 5px 0;
   margin: 2px 0 0;
   list-style: none;
@@ -165,6 +169,7 @@ fieldset[disabled] .twitter-typeahead .tt-input {
   background-clip: padding-box;
   *border-right-width: 2px;
   *border-bottom-width: 2px;
+  text-align: left;
 }
 .tt-dropdown-menu .tt-suggestion {
   display: block;
@@ -186,4 +191,7 @@ fieldset[disabled] .twitter-typeahead .tt-input {
 }
 .tt-dropdown-menu .tt-suggestion p {
   margin: 0;
+}
+.twitter-typeahead {
+  display: inline !important;
 }
